<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".actividades.CursosActivity"
    android:orientation="vertical">

    <!--PADRE -->
    <LinearLayout
        android:id="@+id/linearlayout_cursos_detalles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreenLight"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lineararea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewarea"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_area"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_area"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearcategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewcategoria"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_categoria"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_categoria"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearsubcategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewsubcategoria"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_subcategoria"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_subcategoria"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearsku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewsku"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_sku"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_sku"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
                    android:id="@+id/linearnombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            <TextView
                        android:id="@+id/textviewnombre"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:textStyle="bold"
                        android:text="@string/tit_curso_nombre"
                        android:padding="1dp"/>
            <TextView
                        android:id="@+id/detalles_nombre"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearduracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewduracion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_duracion"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_duracion"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearformato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewformato"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_formato"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_formato"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearidioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewidioma"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_idioma"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_idioma"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearmodalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewmodalidad"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_modalidad"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_modalidad"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearfabricante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewfabricante"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_fabricante"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_fabricante"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearnivel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewnivel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_nivel"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_nivel"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearoficial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewoficial"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_oficial"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_oficial"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lineardocumentacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewdocumentacion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_documentacion"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_documentacion"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lineardescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewdescripcion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_descripcion"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_descripcion"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearobjetivos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewobjetivos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_objetivos"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_objetivos"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearaudiencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewaudiencia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_audiencia"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_audiencia"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearcontenidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewcontenidos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_contenidos"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_contenidos"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewimage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_imagen"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_image"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearpdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewpdf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_pdf_curso"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_pdf"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
         <!--   android:textColor="@color/colorRojo"
            android:onClick="irAEnlaceweb"/-->
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lineardestacado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textviewdestacado"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textStyle="bold"
                android:text="@string/tit_curso_destacado"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/detalles_destacado"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
        </LinearLayout>
                <!--LinearLayout
                    android:id="@+id/linearenlaceweb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textviewenlaceweb"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:text="enlace_web"
                        android:padding="3dp"/>
                    <TextView
                        android:id="@+id/detalles_enlaceweb"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:textColor="@color/colorRojo"
                        android:onClick="irAEnlaceweb"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearcoste"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textviewcoste"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:text="coste"
                        android:padding="3dp"/>
                    <TextView
                        android:id="@+id/detalles_coste"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:padding="3dp"/>

                </LinearLayout-->
     </LinearLayout>
    <!--FIN PADRE -->
</ScrollView>
